Fixed ContextMenu right align

--- a/src/components/ContextMenu/ContextMenu.scss
+++ b/src/components/ContextMenu/ContextMenu.scss
@@ -11,4 +11,7 @@
     border-radius: var(--spacing-4);
     box-shadow: var(--modal-box-shadow);
     padding: var(--spacing-4);
+    max-width: calc(100vw - 16px);
+    box-sizing: border-box;
+    overflow: auto;
 }
